syntax = "proto3";

package delegation;

option go_package = "cyphera-api/internal/proto";

service DelegationService {
  // Redeems a delegation
  rpc RedeemDelegation (RedeemDelegationRequest) returns (RedeemDelegationResponse);
}

// Request message containing delegation data to be redeemed
message RedeemDelegationRequest {
  // The signature to verify
  bytes signature = 1;
  // The merchant address to receive the tokens
  string merchant_address = 2;
  // The token contract address
  string token_contract_address = 3;
  // The token amount in token decimals
  int64 token_amount = 4;
  // The token decimals
  int32 token_decimals = 5;
  // The EVM chain ID for the transaction
  uint32 chain_id = 6;
  // The network name for the transaction (e.g. "Ethereum Mainnet", "Polygon Amoy", "Base Sepolia", "Optimism Sepolia", "Arbitrum One Sepolia", "Optimism Sepolia")
  string network_name = 7;
}

// Response containing the result of the delegation redemption
message RedeemDelegationResponse {
  // Transaction hash of the redemption transaction
  string transaction_hash = 1;
  
  // Whether the operation was successful
  bool success = 2;
  
  // Error message if the operation failed
  string errorMessage = 3;
} 